--- a/4. map, filter, reduce.md
+++ b/4. map, filter, reduce.md
@@ -1,1 +1,218 @@
 ## map, filter, reduce
+
+## 📌 map
+
+```javascript
+const products = [
+  { name: "겉옷", price: 53000 },
+  { name: "반팔", price: 23000 },
+  { name: "속옷", price: 12000 },
+  { name: "바지", price: 34000 },
+  { name: "양말", price: 3000 },
+];
+```
+
+```javascript
+const map = (f, iter) => {
+  let res = [];
+  for (const v of iter) {
+    res.push(f(v));
+  }
+  return res;
+};
+
+map(((p) => p.name, products)); // 보조함수 전달
+```
+
+<br>
+
+#### 이터러블 프로토콜을 따른 map의 다형성
+
+```javascript
+document.querySelectorAll("*").map; // ❌error , array를 상속 받은 것이 아니기 때문. map함수가 없다.
+
+map((el) => el.nodeName, document.querySelectorAll("*")); // 이터러블 프로토콜을 따르기 때문에 실행 가능
+```
+
+```javascript
+function* gen() {
+  yield 2;
+  yield 3;
+  yield 4;
+}
+
+console.log(map((a) => a * a, gen())); // [4, 9 ,16]
+```
+
+- 제너레이터도 사용 가능.
+
+<br>
+
+- 이터러블 프로토콜을 따르는 함수를 사용하는 것은 많은 다른 헬퍼 함수와의 조합성이 좋아진다는 이야기.
+
+<br>
+
+❓ 헬퍼 함수란
+
+- 다른 함수 안에서 특정 기능을 하고 있는 함수
+
+<br>
+
+```javascript
+let m = new Map();
+m.set("a", 10);
+ms.set("b", 20);
+console.log(new Map(map(([k, a]) => [k, a * 2], m))); // MAP(2) {"a" => 20, "b" =>  40}
+```
+
+<br>
+
+## 📌 filter
+
+- 이터러블 프로토콜을 따른다.
+
+```javascript
+const filetr = (f, iter) => {
+  let res = [];
+  for (const p of iter) {
+    if (f(a)) res.push(a);
+  }
+  return res;
+};
+
+fiter((p) => p.price < 20000, products);
+```
+
+```javascript
+filter((n) => n % 2, [1, 2, 3, 4]); // [1, 3]
+```
+
+```javascript
+console.log(
+  filter(
+    (n) => n % 2,
+    (function* () {
+      yield 1;
+      yield 2;
+      yield 3;
+      yield 4;
+      yield 5;
+    })()
+  )
+); // [1, 3, 5]
+```
+
+<br>
+
+## 📌 reduce
+
+- 값을 축약하는 함수
+
+```javascript
+const reduce = (f, acc, iter) => {
+  // 보조함수, 누적값, 순회할 값
+  for (const a of iter) {
+    acc = f(acc, a);
+  }
+  return acc;
+};
+
+const add = (a, b) => a + b;
+
+console.log(reduce(add, 0, [1, 2, 3, 4, 5])); // 15
+
+console.log(add(add(add(add(add(0, 1), 2), 3), 4), 5)); // 15
+```
+
+- acc 없이도 동작함.
+
+```javascript
+console.log(reduce(add, [1, 2, 3, 4, 5])); // 이 값은 아래 코드와 같이 동작한다.
+console.log(reduce(add, 1, [1, 2, 3, 4, 5])); // acc가 없다면, 처음 값이 자동으로 전달
+```
+
+- 코드 구현
+
+```javascript
+const reduce = (f, acc, iter) => {
+  if (!iter) {
+    iter = acc[Symbol.iterator]();
+    acc = iter.next().value;
+  }
+  for (const a of iter) {
+    acc = f(acc, a);
+  }
+  return acc;
+};
+```
+
+- 보조함수를 통해 안쪽에 있는 값에 다형성을 지원
+- 이터러블을 통해서 외부 값에 대한 다형성도 지원
+
+```javascript
+console.log(reduce((total_pricem product)=>total_price+product.price , 0,products));
+```
+
+<br>
+
+### 축약
+
+```javascript
+console.log(
+  reduce(
+    add,
+    map(
+      (p) => p.price,
+      filter((p) => p.price < 20000, products)
+    )
+  )
+);
+```
+
+<br>
+
+### ⭐ 위 코드를 함수형적으로 사고하며 작성하기
+
+```javascript
+console.log(reduce(add, [1, 2, 3, 4, 5]));
+```
+
+1. 먼저 이렇게 작성하고 숫자들로 된 배열로 평가되게 작성하면 되는구나라고 인식.
+
+```javascript
+console.log(
+  reduce(
+    add,
+    map((p) => p.price, products)
+  )
+);
+```
+
+2. map을 통해 숫자들로 되어있는 배열로 평가되게 기대를 하면서 추가.
+
+```javascript
+console.log(
+  reduce(
+    add,
+    map((p) => p.price, [{ name: "겉옷", price: 53000 }])
+  )
+);
+```
+
+3. 특정 조건의 products 만 남겨져 있는 배열로 평가되게 해야겠다라고 생각
+
+```javascript
+console.log(
+  reduce(
+    add,
+    map(
+      (p) => p.price,
+      filter((p) => p.price > 50000, products)
+    )
+  )
+);
+```
+
+4. 최종적으로 작성.
+
+✔️ 함수형 프로그래밍에선 이런식으로 사고하면서 프로그래밍 해나아간다.
