--- a/4. map, filter, reduce.md
+++ b/4. map, filter, reduce.md
@@ -46,7 +46,7 @@ console.log(map((a) => a * a, gen())); // [4, 9 ,16]
 
 - 제너레이터도 사용 가능.
 
-<br>
+  <br>
 
 - 이터러블 프로토콜을 따르는 함수를 사용하는 것은 많은 다른 헬퍼 함수와의 조합성이 좋아진다는 이야기.
 
@@ -124,12 +124,16 @@ console.log(reduce(add, 0, [1, 2, 3, 4, 5])); // 15
 console.log(add(add(add(add(add(0, 1), 2), 3), 4), 5)); // 15
 ```
 
+<br>
+
 - acc 없이도 동작함.
 
 ```javascript
 console.log(reduce(add, [1, 2, 3, 4, 5])); // 이 값은 아래 코드와 같이 동작한다.
 console.log(reduce(add, 1, [1, 2, 3, 4, 5])); // acc가 없다면, 처음 값이 자동으로 전달
 ```
+
+<br>
 
 - 코드 구현
 
@@ -171,13 +175,15 @@ console.log(
 
 <br>
 
-### ⭐ 위 코드를 함수형적으로 사고하며 작성하기
+## ⭐ 위 코드를 함수형적으로 사고하며 작성하기
+
+1. 먼저 이렇게 작성하고 숫자들로 된 배열로 평가되게 작성하면 되는구나라고 인식.
 
 ```javascript
 console.log(reduce(add, [1, 2, 3, 4, 5]));
 ```
 
-1. 먼저 이렇게 작성하고 숫자들로 된 배열로 평가되게 작성하면 되는구나라고 인식.
+2. map을 통해 숫자들로 되어있는 배열로 평가되게 기대를 하면서 추가.
 
 ```javascript
 console.log(
@@ -188,7 +194,7 @@ console.log(
 );
 ```
 
-2. map을 통해 숫자들로 되어있는 배열로 평가되게 기대를 하면서 추가.
+3. 특정 조건의 products 만 남겨져 있는 배열로 평가되게 해야겠다라고 생각
 
 ```javascript
 console.log(
@@ -199,7 +205,7 @@ console.log(
 );
 ```
 
-3. 특정 조건의 products 만 남겨져 있는 배열로 평가되게 해야겠다라고 생각
+4. 최종적으로 작성.
 
 ```javascript
 console.log(
@@ -212,7 +218,5 @@ console.log(
   )
 );
 ```
-
-4. 최종적으로 작성.
 
 ✔️ 함수형 프로그래밍에선 이런식으로 사고하면서 프로그래밍 해나아간다.
