--- a/5. 코드를 값으로 다루어 표현력 높이기.md
+++ b/5. 코드를 값으로 다루어 표현력 높이기.md
@@ -1,4 +1,4 @@
-## 📌코드를 값으로 다루기
+## 📌코드를 값으로 다루어 표현력 높이기
 
 ```javascript
 const log = console.log;
@@ -18,11 +18,7 @@ log(
 
 <br>
 
-## 📌코드를 값으로 다루어 표현력 높이기
-
-### go, pipe
-
-#### go
+### go
 
 ```javascript
 const go = (...args) => reduce((a, f) => f(a), args);
@@ -38,7 +34,7 @@ go(
 
 <br>
 
-#### pipe
+### pipe
 
 ```javascript
 const pipe =
@@ -90,7 +86,7 @@ go(
 
 <br>
 
-#### curry
+### curry
 
 - 함수를 값으로 다루면서 받아둔 함수를 원하는 시점에 평가시키는 함수
 
@@ -146,7 +142,7 @@ const reduce = curry((f, acc, iter)) => {
 
 <br>
 
-- 위의 go 함수를 그러면 더 간결하게 표현 가능하다.
+- 이를 이용하여 위의 go 함수를 더 간결하게 표현 가능하다.
 
 ```javascript
 go(
@@ -244,4 +240,6 @@ const total_price = sum((p) => p.price, products);
 ## 👨‍💻 느낀점
 
 - 함수형 프로그래밍의 특징을 잘 느낄 수 있는 챕터였다.
-- 함수를 최대한 재사용할 수 있게 구성해보면서 코드를 간결하게 만들어 보는 작업이 흥미로웠다. 특히, go 함수를 간결하게 표현할 때 아 이 부분이 코드를 값으로 다룰 때의 장점이구나 확 체감 되었다. 이렇게 함수를 원하는 식으로 잘 구성한다면, 재사용성을 최대로 끌어올려 간결해짐과 동시에 더 함수형 프로그래밍 다운 코드로 구성할 수 있겠다.
+- 함수를 최대한 재사용할 수 있게 구성해보면서 코드를 간결하게 만들어 보는 작업이 흥미로웠다.
+- 특히, go 함수를 간결하게 표현할 때 아 이 부분이 코드를 값으로 다룰 때의 장점이구나 확 체감 되었다.
+- 이렇게 함수를 원하는 식으로 잘 구성한다면, 재사용성을 최대로 끌어올려 간결해짐과 동시에 더 함수형 프로그래밍 다운 코드로 구성할 수 있겠다.
