feat: 지연성2 작성

--- a/6. 지연성1.md
+++ b/6. 지연성1.md
@@ -217,7 +217,6 @@ go(
 - 0 1
 - 10 11
 - false true
--           11
 
 <br>
 
@@ -227,9 +226,9 @@ go(
 - 사용하는 보조 합수가 순수 함수라면 무엇이든지
 - 아래와 같이 결합한다면 둘 다 결과가 같다.
 
-[[mapping, mapping], [filtering, filtering], [mapping, mapping]]
-위 아래는 같다.
-[[mapping,filtering, mapping], [mapping,filtering, mapping]]
+- [[mapping, mapping], [filtering, filtering], [mapping, mapping]]
+- 위 아래는 같다.
+- [[mapping,filtering, mapping], [mapping,filtering, mapping]]
 
 <br>
 
